fixed resume downloading on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11370,6 +11370,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 table {
   width: 100%;
+  padding-right: 10px;
 }
 
 td {
